@@ -67,6 +67,8 @@ New in v0.8.00 (2016/07/??)
   - As reported on the mailinglist, if a space is entered while duplicity asks for the URL, it fails.
     Since all important spaces are URL encoded anyway, this should be fine even if there are spaces in
     the URL at all. I also patched it in the onedrive backend, because it must have similar issues.
+* Fixed bug #1623342 with patch supplied by Daniel Jakots
+  - Failing test on OpenBSD because tar/gtar not found
 
 
 New in v0.7.08 (2016/07/02)
